# ruckig

./: .clang-format  .gitignore  CMakeLists.txt
examples/: 15_accel_phase.cpp  9_accel_phase.cpp
include/ruckig/: block.hpp  brake.hpp  calculator.hpp  calculator_target.hpp  input_parameter.hpp  position.hpp  profile.hpp  roots.hpp  ruckig.hpp  trajectory.hpp  utils.hpp
src/: brake.cpp
src/ruckig/: brake.cpp  position_second_step1.cpp  position_second_step2.cpp  position_third_step1.cpp  position_third_step2.cpp  velocity_third_step1.cpp  velocity_third_step2.cpp
test/: otg-test.cpp  randomizer.hpp
